--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -72,9 +72,9 @@
       <div class="row">
         <h1 class="main-title text-center"><span class="lettrine">P</span>rendre contact</h1>
       </div>
-      <div class="row justify-content-center text-center g-5">
-        <div class="col-md-6 col-lg-4 ms-md-1 ms-lg-0">
-          <h5 class="mb-3"><span class="lettrine">M</span>embres du bureau&nbsp;:</h5>
+      <div class="row justify-content-between text-center g-5">
+        <div class="col-md-5 ms-md-1 ms-lg-0">
+          <h5 class="mb-3 mb-md-5"><span class="lettrine">M</span>embres du bureau&nbsp;:</h5>
           <div class="card mb-3">
             <div class="row g-0 align-items-center">
               <div class="col-4">
@@ -120,21 +120,40 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 mt-md-5 pt-lg-0">
-          <h5 class="mb-3"><span class="lettrine">N</span>os adresses&nbsp;:</h5>
-          <p style="font-size: larger;">
-            Les Bardes d'Hypérion<br />
-            Auberge du Poney Fringant<br />
-            3791 Bree<br />
-            <a class="text-decoration-none fw-bold" href="mailto:bardes.hyperion@mordor.me"
-              >bardes.hyperion@mordor.me
-            </a>
-          </p>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mt-md-5 pt-lg-0">
-          <h5 class="mb-3"><span class="lettrine">N</span>ous situer&nbsp;:</h5>
-          <img src="../img/map.png" alt="carte de géolocalisation" class="img-fluid">
+        <div class="col-md-6 ms-md-1 ms-lg-0">
+          <h5 class="mb-3"><span class="lettrine">N</span>ous écrire&nbsp;:</h5>
+          <form action="#" method="post" class="form-floating">
+            <div class="my-3 text-start">
+              <label for="exampleFormControlInput1" class="form-label">E-mail de contact</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="name@example.com"
+                disabled
+              />
+            </div>
+            <div class="mb-3 text-start">
+              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="7"
+                disabled
+              ></textarea>
+            </div>
+            <div class="text-md-start">
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="popover"
+                data-bs-title="Bientôt !"
+                data-bs-content="Le formulaire sera bientôt actif, en attendant contactez-nous par mail !"
+              >
+                Envoyer
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </main>
@@ -231,5 +250,11 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script>
+      const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+      const popoverList = [...popoverTriggerList].map(
+        (popoverTriggerEl) => new bootstrap.Popover(popoverTriggerEl)
+      );
+    </script>
   </body>
 </html>
