[HOTFIX] buttons visibility

--- a/assets/HTML/activities.html
+++ b/assets/HTML/activities.html
@@ -94,7 +94,7 @@
               </p>
               <p class="mt-auto">
                 Plus d'informations:
-                <a href="./contact.html" class="btn btn-sm">Contactez-nous</a>
+                <a href="./contact.html" class="btn btn-sm btn-primary">Contactez-nous</a>
               </p>
             </div>
           </div>
