--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   partagez des moments inoubliables avec des passionnés comme vous !
                 </p>
                 <div class="mt-auto">
-                  <a href="./assets/HTML/roleplay.html" class="btn btn-sm">Découvrez</a>
+                  <a href="./assets/HTML/roleplay.html" class="btn btn-sm btn-primary">Découvrez</a>
                 </div>
               </div>
             </div>
@@ -122,7 +122,7 @@
                   Les horaires et les prochains évènements, c'est par ici !
                 </p>
                 <div class="mt-auto">
-                  <a href="./assets/HTML/activities.html" class="btn btn-sm">Agenda</a>
+                  <a href="./assets/HTML/activities.html" class="btn btn-sm btn-primary">Agenda</a>
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
                   avides d'aventures et de divertissement.
                 </p>
                 <div class="mt-auto">
-                  <a href="./assets/HTML/contact.html" class="btn btn-sm">Contactez-nous</a>
+                  <a href="./assets/HTML/contact.html" class="btn btn-sm btn-primary">Contactez-nous</a>
                 </div>
               </div>
             </div>
